Fixed Navbar outline overflow

--- a/pilarluiz/src/components/Button.css
+++ b/pilarluiz/src/components/Button.css
@@ -14,6 +14,7 @@
   background-color: var(--primary);
   color: #242424;
   border: 1px solid var(--primary);
+  /* height: 10px; */
 }
 
 .btn--outline {
@@ -26,7 +27,7 @@
 
 .btn--medium {
   padding: 8px 20px;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .btn--large {
@@ -34,9 +35,10 @@
   font-size: 20px;
 }
 
-.btn--medium:hover,
-.btn--large:hover {
+.btn--large:hover,
+.btn--medium:hover {
+  transition: all 0.3s ease-out;
   background: #fff;
   color: #242424;
-  transition: all 0.3s ease-out;
+  transition: 250ms;
 }
