--- a/pilarluiz/src/components/Navbar.css
+++ b/pilarluiz/src/components/Navbar.css
@@ -46,7 +46,7 @@
 }
 
 .nav-item {
-  height: 80px;
+  /* height: 80px; */
 }
 
 .nav-links {
@@ -84,9 +84,10 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    /* height: 90vh; */
+    /* height: auto; */
     position: absolute;
-    top: 80px;
+    top: 80px; /* 80px down from top of screen (navbar) */
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
